--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="section-trucks truck">
 						<h2 class="track-title ">Наш автопарк</h2>
 						<p class="track_text">
-							В автопарке ООО "РусТранс" более 100 единиц транспорта различного назначения и грузоподъемности. Для перевозок малогобаритных и легких грузов мы распологаем парком грузопасажирских микроавтобусов и газелий. Для крупногабаритных первозок в нашей фирме работает большое количество еврофур, так же мы имеем рефрижираторы, изотермы, шаланды, контейнерные площадки и транспорт для перевозки опасного и крупногабаритного груза.							
+							В автопарке ООО "РусТранс" более 100 единиц транспорта различного назначения и грузоподъемности. Для перевозок малогобаритных и легких грузов мы распологаем парком грузопасажирских микроавтобусов и газелей. Для крупногабаритных перевозок в нашей фирме работает большое количество еврофур, так же мы имеем рефрижираторы, изотермы, шаланды, контейнерные площадки и транспорт для перевозки опасного и крупногабаритного груза.							
 						</p>
 						
 						<div class="truck_cards">
